--- a/package.json
+++ b/package.json
@@ -21,10 +21,14 @@
   ],
   "scripts": {
     "check": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "devDependencies": {
+    "@types/chai": "^5.2.1",
+    "@types/mocha": "^10.0.10",
     "@types/node": "^22.14.1",
+    "chai": "^5.2.0",
+    "mocha": "^11.1.0",
     "typescript": "^5.8.3"
   }
 }
