--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
   },
   "dependencies": {
     "commander": "^13.1.0",
-    "figlet": "^1.8.1"
+    "decimal.js": "^10.5.0",
+    "figlet": "^1.8.1",
+    "handlebars": "^4.7.8"
   },
   "devDependencies": {
     "@types/chai": "^5.2.1",
